# sn

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  HACKING.md  LICENSE  README.md
.github/workflows/: all.yml
scripts/: build_test_all.sh
src/: CMakeLists.txt
src/sn/: CMakeLists.txt
src/sn/core/: CMakeLists.txt  enum_reflection.h  exception.h  format.cpp  format.h  globals.h  preprocessor.h  preprocessor_ut.cpp  tags.h  type_name.h  type_name_builtins.h  type_name_ut.cpp
src/sn/core/test/: preprocessor_ut.cpp  type_name_ut.cpp
src/sn/detail/: CMakeLists.txt
src/sn/detail/ascii/: CMakeLists.txt  ascii_functions.h  ascii_functions_ut.cpp
src/sn/detail/enum_table/: CMakeLists.txt  enum_table.h  enum_table_exceptions.cpp  enum_table_exceptions.h  small_buffer.h  universal_enum_table.h
src/sn/detail/format/: CMakeLists.txt
src/sn/detail/preprocessor/: CMakeLists.txt  preprocessor.h
src/sn/detail/test/: CMakeLists.txt  boolean_test_suite.h  enum_test_suite.h  float_test_suite.h  integer_test_suite.h  test_suite.h
src/sn/detail/workaround/: CMakeLists.txt  make_unique_for_overwrite.h
src/sn/enum/: CMakeLists.txt  ascii_functions.h  ascii_functions_ut.cpp  enum_exceptions.cpp  enum_exceptions.h  enum_reflection.h  enum_string.h  enum_string_benchmark.cpp  enum_string_multi_first_ut.cpp  enum_string_ut.cpp  enum_table.h  frozen_enum_table.h  small_buffer.h  std_enum_table.cpp  std_enum_table.h
src/sn/qenum/: CMakeLists.txt  enum_qstring.h  enum_qstring_ut.cpp
src/sn/qstring/: CMakeLists.txt  enum_qstring.h  enum_qstring_ut.cpp  qstring.h  qstring_builtins.cpp  qstring_builtins.h  qstring_concepts.h  qstring_exceptions.cpp  qstring_exceptions.h  qstring_fwd.h  qstring_ut.cpp  qstring_ut.h  std_qstring_enum_table.cpp  std_qstring_enum_table.h
src/sn/qstring/detail/: ascii_qstring_functions.h  qstring_builtins.cpp  qstring_builtins.h  qstring_exceptions.cpp  qstring_exceptions.h  std_qstring_enum_table.cpp
src/sn/qstring/test/: enum_qstring_ut.cpp  qstring_ut.cpp  qstring_ut.h
src/sn/ranges/: CMakeLists.txt  clear.h  insert.h
src/sn/ranges/detail/: ranges_ut.cpp
src/sn/string/: CMakeLists.txt  enum_string.h  enum_string_benchmark.cpp  enum_string_multi_ut.h  enum_string_ut.cpp  frozen_enum_table.h  std_enum_table.h  string.h  string_builtins.cpp  string_builtins.h  string_concepts.h  string_exceptions.cpp  string_exceptions.h  string_fwd.h  string_tags.h  string_ut.cpp  string_ut.h
src/sn/string/benchmark/: enum_string_benchmark.cpp
src/sn/string/detail/: frozen_enum_table.h  std_enum_table.cpp  std_enum_table.h  string_builtins.cpp  string_builtins.h  string_exceptions.cpp  string_exceptions.h
src/sn/string/test/: enum_string_multi_second_ut.cpp  enum_string_multi_ut.h  enum_string_ut.cpp  string_ut.cpp  string_ut.h
src/sn/workaround/: CMakeLists.txt  make_unique_for_overwrite.h  to_underlying.h
tools/: CMakeLists.txt
tools/ppgen/: CMakeLists.txt  ppgen.cpp
